!!! now petri server exposes a functional backoffice UI !!!
- separate guineapig spring config into core and user extendable
- wire guineapig correctly into the main petri server (use config to share petri server db config and services)