@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>guineapig-webapp</artifactId>
+    <name>Petri BackOffice Web (GuineaPig)</name>
     <packaging>jar</packaging>
 
     <properties>
@@ -272,29 +273,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.17</version>
+                <version>2.19.1</version>
                 <executions>
                     <execution>
-                        <id>dev</id>
                         <goals>
                             <goal>integration-test</goal>
                             <goal>verify</goal>
                         </goals>
-                        <configuration>
-                            <summaryFile>target/failsafe-reports/failsafe-summary-embedded.xml</summaryFile>
-                            <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
-                            <testSourceDirectory>src/it/java</testSourceDirectory>
-                            <includes>
-                                <include>**/*IT.java</include>
-                                <include>**/*E2E.java</include>
-                            </includes>
-                        </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <forkMode>once</forkMode>
-                    <useSystemClassLoader>true</useSystemClassLoader>
-                </configuration>
             </plugin>
         </plugins>
     </build>
